--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -17,7 +17,7 @@
                 <li><a href="/audio/">Audio</a></li>
                 <li><a href="/artists/">Artists</a></li>
                 <li><a href="/labels/">Labels</a></li>
-                <!--<li><a href="/shop/">Shop</a></li>-->
+                <li><a href="/shop/">Shop</a></li>
                 <li><a href="/radio/">Radio</a></li>
                 <li><a href="/about/">About</a></li>
             </ul>
@@ -25,7 +25,12 @@
         </nav>
         <marquee behaviour="alternate" direction="left">
             <h1 class="status">
-            audio server not available                |                radio soon to be added
+            <b>status:</b>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            audio server not available
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; | &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            radio coming soon...
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; | &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             </h1>
         </marquee>
     </header>
