feat:(front): map artists api items to pages

--- a/front/src/artists/index.njk
+++ b/front/src/artists/index.njk
@@ -7,23 +7,23 @@ title: "Artists"
 <h1>Artists</h1>
 
 <div class="artists-grid">
-{% for artist in collections.artists %}
+{% for artist in artists %}
     <div class="artist-card">
-        <a href="{{ artist.url }}" class="artist-link">
-            {% if artist.data.image %}
-            <img src="{{ artist.data.image }}" alt="{{ artist.data.name }}" class="artist-image-thumb">
+        <a href="/artists/{{ artist.id }}" class="artist-link">
+            {% if artist.imageUrl %}
+            <img src="{{ artist.imageUrl }}" alt="{{ artist.name }}" class="artist-image-thumb">
             {% endif %}
             <div class="artist-card-info">
-                <h2 class="artist-name">{{ artist.data.name }}</h2>
+                <h2 class="artist-name">{{ artist.name }}</h2>
                 {% if artist.data.location %}
                 <p class="artist-location">{{ artist.data.location }}</p>
                 {% endif %}
                 {% if artist.data.genres %}
                 <p class="artist-genres">
-                {% if artist.data.genres is iterable and artist.data.genres is not string %}
-                    {{ artist.data.genres | join(", ") }}
+                {% if artist.tags is iterable and artist.tags is not string %}
+                    {{ artist.tags}}
                 {% else %}
-                    {{ artist.data.genres }}
+                    {{ artist.tags }}
                 {% endif %}
                 </p>
                 {% endif %}
